--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="Assets/logo/pes.png">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>IEEE PES MACE SB</title>
 </head>
 
 <body>
     <nav>
         <ul class="navigation">
             <li class="nav__item">
-                <a href="#"><img src="https://unsplash.it/100" alt="" class="nav__logo"></a>
+                <a href="#"><img src="Assets/logo/pes.png" alt="" class="nav__logo"></a>
             </li>
 
             <div class="nav__links">
@@ -81,9 +82,9 @@
                     <img src="Assets/poster/pes day Incendo.png" alt="">
                     <img src="Assets/poster/pes day pesto.png" alt="">
                     <img src="Assets/poster/pes day talk.png" alt="">
-                    <img src="Assets/poster/Pulse.png" alt="">
                     <img src="Assets/poster/pes day inaug..png" alt="">
                     <img src="Assets/poster/pes day treasure.png" alt="">
+                    <img src="Assets/poster/Pulse.png" alt="">
                 </div>
             </div>
 
