--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                 magnam deserunt eaque reiciendis voluptates magni sequi at. Atque velit perferendis, neque explicabo
                 quae autem voluptatum, deserunt omnis, id accusamus beatae ratione quis aliquam eveniet saepe! Rerum
                 provident dolores excepturi atque sequi in debitis laboriosam nesciunt reprehenderit rem accusamus
-                expedita, temporibus vitae odit amet voluptates voluptas incidunt et sunt ut.
-                velit.</p>
+                expedita, temporibus vitae odit amet voluptates voluptas incidunt et sunt ut.</p>
         </div>
     </section>
 
