--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="landing__page">
         <div class="landing__content">
             <h1 class="landing__title">IEEE PES SBC MACE</h1>
-            <h3 class="landing__caption">Lorem ipsum dolor sit.</h3>
+            <h3 class="landing__caption">More Power to Future.</h3>
         </div>
         <div class="gradient"></div>
         <img src="Assets/img/pexels-singkham-1108572.jpg" alt="" class="landing__img">
@@ -40,23 +40,14 @@
         <h1 class="title">About</h1>
         <div class="container about__section">
             <h1 class="about__title">IEEE MACE SB</h1>
-            <p class="about__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum sapiente esse,
-                minus labore nulla reiciendis atque rem ab ea natus officia amet deserunt molestiae officiis error
-                pariatur. Accusantium, ipsam. Quibusdam eius, nisi accusantium molestias quod nostrum officia a harum
-                non ratione? Quod aperiam atque, cupiditate aspernatur laboriosam itaque laborum, repellat dolorem, odit
-                maiores inventore eveniet rerum? Pariatur quibusdam incidunt quasi at sit accusantium ea nostrum tenetur
-                odio laboriosam! Iusto in molestiae quisquam a nulla aperiam distinctio perspiciatis ipsa, illo officia
-                quia magni, iure, voluptas eum aliquam? Et, iusto accusantium nostrum similique rerum voluptates
-                provident, eaque tenetur neque velit dolores dicta accusamus vero doloribus a? Officia aperiam sed,
-                atque laboriosam nam et architecto deleniti reiciendis eos voluptas, voluptatibus ullam autem quisquam
-                quidem sit magni harum error culpa magnam ex, blanditiis maiores. Inventore at illum repellat odio
-                magnam ullam eius perspiciatis quis tempora sit sequi et pariatur quaerat recusandae, architecto alias
-                cum, perferendis nostrum. Deleniti hic assumenda iure voluptas placeat voluptatum dolore, amet quidem
-                expedita nostrum ea eum minima laborum tempore eaque atque quam. Earum in, obcaecati nemo, blanditiis
-                magnam deserunt eaque reiciendis voluptates magni sequi at. Atque velit perferendis, neque explicabo
-                quae autem voluptatum, deserunt omnis, id accusamus beatae ratione quis aliquam eveniet saepe! Rerum
-                provident dolores excepturi atque sequi in debitis laboriosam nesciunt reprehenderit rem accusamus
-                expedita, temporibus vitae odit amet voluptates voluptas incidunt et sunt ut.</p>
+            <p class="about__content">IEEE Student Branch MACE (Student Branch Code: 32041) was established on November
+                17th, 1988. Being one of the largest student branches across the globe with over 500 student members,
+                diverse events are organized to heighten the skills of our students within diversified domains and equip
+                them with the rapidly changing industry.
+                A great deal of pride goes to the Student Branch's volunteers, who actively take part at various levels,
+                are extremely active, and are always eager to take on new challenges. It is matter of utmost
+                satisfaction to organize multiple events to meet the needs of students in their respective areas of
+                interest, molding them into better professionals who will in turn shape a better tomorrow..</p>
         </div>
     </section>
 
@@ -66,9 +57,8 @@
 
         <div class="event__container">
             <div class="container event__pesday">
-                <h2 class="event__title">PES Day</h2>
-                <p class="event__desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut earum laborum
-                    tenetur.</p>
+                <h2 class="event__title">Annual PES Day Celebrations</h2>
+                <p class="event__desc">Potentia 2.0</p>
                 <div class="event__img__container">
                     <img src="Assets/poster/pes day blog.png" alt="">
                     <img src="Assets/poster/pes day digi art.png" alt="">
@@ -78,24 +68,28 @@
                     <img src="Assets/poster/pes day talk.png" alt="">
                     <img src="Assets/poster/pes day inaug..png" alt="">
                     <img src="Assets/poster/pes day treasure.png" alt="">
-                    <img src="Assets/poster/Pulse.png" alt="">
+                    <!-- <img src="Assets/poster/Pulse.png" alt=""> -->
                 </div>
             </div>
 
             <div class="container event__iv">
                 <h2 class="event__title">Industrial Visits</h2>
-                <p class="event__desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut earum laborum
-                    tenetur.</p>
+                <p class="event__desc">IV to Idamalayar Power Generation Unit</p>
                 <div class="event__img__container">
-                    <img src="https://unsplash.it/1005" alt="">
-                    <img src="https://unsplash.it/1006" alt="">
-                    <img src="https://unsplash.it/1007" alt="">
-                    <img src="https://unsplash.it/1008" alt="">
+                    <img src="Assets/img/IMG20231007160704.jpg" alt="">
+                    <img src="Assets/img/IMG20231007160205.jpg" alt="">
+                    <img src="Assets/img/IMG_20231007_160658.jpg" alt="">
+                    <img src="Assets/img/IMG_4966.jpg" alt="">
+                    <img src="Assets/img/IMG_5003.jpg" alt="">
                 </div>
             </div>
         </div>
 
     </section>
+    <footer>
+        <p class="copyright">© Copyright 2023 All Rights Reserved by
+            RAICS</p>
+    </footer>
 </body>
 
 </html>
