--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
     <footer>
         <p class="copyright">© Copyright 2023 All Rights Reserved by
-            RAICS</p>
+            PES</p>
     </footer>
 </body>
 
